# react_federation

./: CAPACITOR_SETUP.md  README.md  capacitor.config.ts  nx.json  package-lock.json  package.json  tsconfig.json
apps/mfe1/: config.ts  project.json  tsconfig.app.json  webpack.config.js
apps/mfe1/public/: README.md  index.html  manifest.json
apps/mfe1/src/: CapacitorIOSNavigation.tsx  DesktopNavigation.tsx  IOSNavigation.tsx  MFE1Bar.tsx  MFE1Foo.tsx  MFE1FooLarge.tsx  MFE1FooSmall.tsx  MFE1Home.tsx  Module.ts  main.tsx  mfe-routes.json
apps/shell/: project.json  webpack.config.js
apps/shell/public/: index.html
apps/shell/src/: App.tsx  ChatPanel.tsx  MetadataPanel.tsx  QuerySearchSample.tsx  ShellHome.tsx  ShellLayout.tsx  main.tsx  shell-routes.json
apps/shell/src/config/: remotes.ts
cube/: cube.js
cube/model/: orderItems.js  orders.js  products.js
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
libs/portal/: project.json
libs/portal/src/: client-detector.ts  component-registry.ts  decorators.ts  di.ts  feature-renderer.tsx  index.ts  manifest-loader.ts  navigation.ts  registry.ts  remote-loader.ts  route-manager.ts
libs/portal/src/communication/: http-service.ts  index.ts
libs/portal/src/cube/: CubePreviewPanel.tsx  MetadataPanel.tsx  index.ts  (+4 more)
server/: .pylintrc  install.sh  pyproject.toml
server/docker/: docker-compose.yml
server/docker/cube/model/: customers.js  sales.js
tools/metadata/: package-lock.json  package.json  project.json  tsconfig.lib.json
tools/metadata/src/: build-metadata.ts  feature-parser.ts
(+138 files in other folders)
